backend/web/css/site.css
html,
body {
    height: 100%;
}

@media (min-width: 1600px) {
    .container {
        width: 1570px;
    }
}

@media (min-width: 1920px) {
    .container {
        width: 1870px;
    }
}

.wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

.wrap > .container {
    padding: 70px 15px 20px;
}

.footer {
    height: 60px;
    background-color: #f5f5f5;
    border-top: 1px solid #ddd;
    padding-top: 20px;
}

.jumbotron {
    text-align: center;
    background-color: transparent;
}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

.not-set {
    color: #c55;
    font-style: italic;
}

.no-text {
    font-style: italic;
}

/* add sorting icons to gridview sort links */
a.asc:after, a.desc:after {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 5px;
}

a.asc:after {
    content: /*"\e113"*/ "\e151";
}

a.desc:after {
    content: /*"\e114"*/ "\e152";
}

.sort-numerical a.asc:after {
    content: "\e153";
}

.sort-numerical a.desc:after {
    content: "\e154";
}

.sort-ordinal a.asc:after {
    content: "\e155";
}

.sort-ordinal a.desc:after {
    content: "\e156";
}

.grid-view td {
    white-space: normal;
}

.grid-view .filters input,
.grid-view .filters select {
    min-width: 50px;
}

.hint-block {
    display: block;
    margin-top: 5px;
    color: #999;
}

.error-summary {
    color: #a94442;
    background: #fdf7f7;
    border-left: 3px solid #eed3d7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

/* align the logout "link" (button in form) of the navbar */
.nav > li > form {
    padding: 8px;
}

.nav > li > form > button:hover {
    text-decoration: none;
}

p {
    text-align: justify;
}

.key {
    background-color: lightgray;
    border-radius: 15px;
    font-family: "Courier New", Courier, monospace;
    font-size: 1.1em;
    font-weight: bold;
    padding: 5px 5px;
    text-align: center;
}

@media (960px <= width < 1200px) {
    .key {
        font-size: 1.1em;
    }
}

@media (1200px <= width < 1600px) {
    .key {
        font-size: 1.3em;
    }
}

@media (min-width: 1600px) {
    .key {
        font-size: 2em;
    }
}

/* Clearing trick */
.buttoned-header:before {
    content: " ";
    display: table;
}

.buttoned-header:after {
    content: " ";
    display: table;
    clear: both;
}

.buttoned-header > h1, .buttoned-header > h2, .buttoned-header > h3 {
    float: left;
}

.buttoned-header > a, .buttoned-header > div, .buttoned-header > p {
    float: right;
    margin: 20px 0 10px 10px;
}

.buttons-on-view {
    margin: 5px 0;
    text-align: center;
}

.buttons-on-view > a {
    margin: 5px 5px;
}

.buttons-under-header {
    margin: 0 2px 10px 10px;
    text-align: right;
}

.buttons-under-table {
    margin: 2px;
    text-align: center;
}

.buttons-under-table > a {
    margin: 5px 5px;
}

.btn-epic-choice {
    border-radius: 10px;
    display: inline-block;
    margin: 0 1% 10px 0;
    white-space: break-spaces;
    width: 31%;
}

@media (max-width: 1024px) {
    .btn-epic-choice {
        width: 100%;
        margin: 10px 0;
    }
}

@media (max-width: 1600px) {
    .btn-epic-choice {
        width: 47%;
    }
}

.btn-block + .btn-block {
    margin-top: 0;
}

.public-notes {
    border: 4px dotted lightblue;
    border-radius: 15px;
    padding: 10px 15px 0 15px;
    margin: 10px 0;
}

.protected-notes {
    border: 4px dashed lightblue;
    border-radius: 15px;
    padding: 10px 15px 0 15px;
    margin: 10px 0;
}

.private-notes {
    border: 4px solid lightblue;
    border-radius: 15px;
    padding: 10px 15px 0 15px;
    margin: 10px 0;
}

.subtitle {
    font-style: italic;
    padding: 5px;
}

.tag-box {
    background-color: lightblue;
    border-radius: 5px;
    display: inline-block;
    font-weight: bold;
    margin: 0 5px 5px 0;
    padding: 5px 10px;
}

.btn-group {
    margin: 5px 4px;
}

.btn-wide {
    width: 100%;
}

.btn-copy-in-modal {
    display: block;
    max-width: 90%;
    margin: 15px auto 10px;
}

.invitation-link-content {
    resize: none;
    width: 100%;
}

.error-box {
    color: #a94442;
    background: #fdf7f7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

.warning-box {
    color: #c8c864;
    background: #fdfdf7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

.info-box {
    color: #4545a9;
    background: #f7f7fd;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

.no-data-box {
    background: whitesmoke;
    border-radius: 10px;
    font-style: italic;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

.glyphicon {
    margin: 0 8px;
}

.announcement-box-time {
    font-style: italic;
    text-align: right;
}

.recap-box-time {
    text-align: right;
    font-family: "Courier New", Courier, monospace;
    font-size: 2rem;
    font-weight: bold;
}

.game-time {
    text-align: right;
    font-family: "Courier New", Courier, monospace;
    font-size: 2rem;
    font-weight: bold;
}

.session-box {
    font-size: 1.8rem;
    line-height: 1.8;
    text-align: left;
}

.game-status {
    color: white;
    display: inline-block;
    font-family: "Courier New", Courier, monospace;
    font-size: 0.8em;
    font-weight: bold;
    border-radius: 15px;
    padding: 3px 7px;
    min-width: 170px;
    margin-right: 10px;
    text-align: center;
    text-transform: uppercase;
    vertical-align: middle;
}

@media (max-width: 1199px) {
    .session-box {
        text-align: center;
    }

    .game-status {
        font-size: 75%;
        margin: 5px 0;
        padding: 5px 10px;
        width: 100%;
    }
}

.game-status-proposed {
    background-color: blueviolet;
}

.game-status-announced {
    background-color: blueviolet;
}

.game-status-unplanned {
    background-color: lightcoral;
}

.game-status-planned {
    background-color: green;
}

.game-status-cancelled {
    background-color: red;
}

.game-status-progressing {
    background-color: green;
}

.game-status-aborted {
    background-color: red;
}

.game-status-completed {
    background-color: darkolivegreen;
}

.game-status-closed {
    background-color: black;
}

.scenario-status {
    display: inline-block;
    font-family: "Arial Narrow", Arial, monospace;
    font-size: 0.8em;
    font-weight: bold;
    border-radius: 15px;
    padding: 7px;
    color: black;
    min-width: 170px;
    margin-right: 10px;
    text-align: center;
    text-transform: uppercase;
    vertical-align: middle;
}

.scenario-status-discarded {
    background-color: darkred;
    color: white;
}

.scenario-status-proposed {
    background-color: navy;
    color: white;
}

.scenario-status-unplanned {
    background-color: grey;
    color: white;
}

.membership-status {
    display: inline-block;
    font-family: "Arial Narrow", Arial, monospace;
    font-size: 0.8em;
    font-weight: bold;
    border-radius: 15px;
    padding: 7px;
    color: black;
    min-width: 170px;
    margin-right: 10px;
    text-align: center;
    text-transform: uppercase;
    vertical-align: middle;
}

.membership-status-deleted {
    background-color: darkred;
    color: white;
}

.membership-status-active {
    background-color: darkgreen;
    color: white;
}

.membership-status-passive {
    background-color: palegreen;
    color: white;
}

.membership-status-past {
    background-color: grey;
    color: white;
}

.external-data-textarea {
    width: 100%;
    margin: 1em 0;
}

.external-data-correct {
    background-color: lightgreen;
    color: darkgreen;
    padding: 1em;
    border-radius: .5rem;
    border: 2px solid;
}

.external-data-error {
    background-color: lightpink;
    color: darkred;
    padding: 1em;
    border-radius: .5rem;
    border: 2px solid;
}

.external-data-info {
    background-color: lightblue;
    color: blue;
    padding: 1em;
    border-radius: .5rem;
    border: 2px solid;
}

.external-data-warning {
    background-color: lightgoldenrodyellow;
    color: darkgoldenrod;
    padding: 1em;
    border-radius: .5rem;
    border: 2px solid;
}

.external-data-tab-container {
}

.external-data-table {
}

.external-data-table > caption {
    text-align: center;
    color: black;
    font-size: 1.5em;
}

.external-data-center {
    text-align: center;
}

.external-data-left {
    text-align: left;
}

.external-data-right {
    text-align: right;
}

.external-data-bold {
    font-weight: bold;
}

.external-data-italic {
    font-style: italic;
}

.tab-pane > div {
    padding: 1.5em;
}

.table-icon-in-cell {
    color: #337ab7;
    float: right;
}

.table-tag {
    padding: 1px 5px;
    font-size: 0.8em;
    border-radius: 3px;
    display: inline-block;
    font-weight: bold;
}

.table-row-story-current {
    font-weight: bold;
}

.managed-tag {
    background-color: orange;
}

.loader-broken {
    color: red;
    margin: 15px auto 0;
    text-align: center;
    font-size: 120px;
    display: block;
    animation: fade-cycle 5s linear infinite;
    font-weight: bold;
}

.loader-broken > p {
    font-size: 16px;
    text-align: center;
}

.circle-loader {
    border: 16px solid lightgrey;
    border-top: 16px solid lightblue;
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
    margin: 15px auto 0;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

@keyframes fade-cycle {
    0% {
        color: darkred;
    }
    50% {
        color: red;
    }
    100% {
        color: darkred;
    }
}

.point-in-time-status-active {
    background-color: green;
    color: white;
}

.point-in-time-status-future {
    background-color: lightskyblue;
}

.point-in-time-status-retired {
    background-color: grey;
    color: white;
}

.epic-status {
    background-color: red;
    color: black;
    display: inline-block;
    font-family: "Courier New", Courier, monospace;
    font-size: 1.2em;
    font-weight: bold;
    border-radius: 15px;
    padding: 5px 15px;
    margin-right: 10px;
    text-align: center;
    text-transform: uppercase;
    vertical-align: middle;
}

.epic-status-in-cell {
    font-size: 1em;
}

.epic-status-cancelled {
    background-color: darkslategrey;
    color: white;
}

.epic-status-closed {
    background-color: black;
    color: white;
}

.epic-status-on-hold {
    background-color: lightgrey;
}

.epic-status-lapsed {
    background-color: lightgrey;
}

.epic-status-finished {
    background-color: darkgreen;
    color: white;
}

.epic-status-planned {
    background-color: greenyellow;
}

.epic-status-prepared {
    background-color: greenyellow;
}

.epic-status-played {
    background-color: green;
    color: white;
}

.epic-status-proposed {
    background-color: greenyellow;
}

.epic-status-resuming {
    background-color: greenyellow;
}

.epic-status-scrapped {
    background-color: darkslategrey;
    color: white;
}

.epic-status-ready {
    background-color: greenyellow;
}

/* Assignment buttons */
.assignment-input-group {
    display: flex;
    align-items: stretch;
}

.assignment-input-group .input-group-btn {
    display: flex;
    align-items: stretch;
    width: auto;
}

.assignment-input-group .input-group-btn .btn {
    height: auto;
}

.assignment-summary {
    display: inline-block;
    max-width: 100%;
    margin-bottom: 5px;
}

.beta-feature-warning {
    font-family: "Courier New", Courier, monospace;
    font-weight: bold;
    padding: 1px;
}

.expanded-image {
    display: block;
    height: auto;
    max-width: 100%;
    margin: 0 auto;
}

.table-bordered > tbody > tr > td {
    vertical-align: middle
}

.table-bordered > tbody > tr > td.action-cell {
    white-space: nowrap;
    width: 1%;
    text-align: center;
}

.text-separating-box {
    border-color: lightgrey;
    border-style: solid;
    border-width: 5px;
    border-radius: 15px;
    padding: 10px;
}

